Added deploying to circleci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,33 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
+deploy:
+  machine:
+    enabled: true
+
+  working_directory: ~/client
+
+  steps:
+    - add_ssh_keys:
+        fingerprints:
+          - "cb:81:dc:09:4b:d9:87:89:f4:8d:7a:71:ab:96:0c:1c"
+    - checkout
+    - run:
+        name: Push Master to Production
+        command: |
+          git push https://github.com/marcelloak/scheduler.git master:production
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
