Altered to use env variable instead of proxy

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 REACT_APP_WEBSOCKET_URL=ws://scheduler-lhl-mk.herokuapp.com/
+REACT_APP_API_BASE_URL=https://scheduler-lhl-mk.herokuapp.com/
 PORT=8000
 CHOKIDAR_USEPOLLING=false
