Altered circleci api urls

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,5 @@ REACT_APP_WEBSOCKET_URL=ws://localhost:8001
 REACT_APP_API_BASE_URL=http://localhost:8001
 PORT=8000
 CHOKIDAR_USEPOLLING=false
+REACT_APP_PROD_WEBSOCKET_URL=ws://scheduler-lhl-mk.herokuapp.com/
+REACT_APP_PROD_API_BASE_URL=https://scheduler-lhl-mk.herokuapp.com/
