--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
             - "cb:81:dc:09:4b:d9:87:89:f4:8d:7a:71:ab:96:0c:1c"
       - checkout
       - run:
-          process.env.REACT_APP_PROD_API_BASE_URL = process.env.REACT_APP_API_BASE_URL;
-          process.env.REACT_APP_PROD_WEBSOCKET_URL = process.env.REACT_APP_WEBSOCKET_URL;
           name: Push Master to Production
           command: |
+            process.env.REACT_APP_PROD_API_BASE_URL = process.env.REACT_APP_API_BASE_URL
+            process.env.REACT_APP_PROD_WEBSOCKET_URL = process.env.REACT_APP_WEBSOCKET_URL
             git push https://github.com/marcelloak/scheduler.git master:production
 
 workflows:
