--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
       - run:
           name: Push Master to Production
           command: |
-            process.env.REACT_APP_API_BASE_URL = process.env.REACT_APP_PROD_API_BASE_URL
-            process.env.REACT_APP_WEBSOCKET_URL = process.env.REACT_APP_PROD_WEBSOCKET_URL
+            REACT_APP_API_BASE_URL = REACT_APP_PROD_API_BASE_URL
+            REACT_APP_WEBSOCKET_URL = REACT_APP_PROD_WEBSOCKET_URL
             git push https://github.com/marcelloak/scheduler.git master:production
 
 workflows:
