--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,9 @@ jobs:
       - run:
           name: Push Master to Production
           command: |
-            REACT_APP_API_BASE_URL = REACT_APP_PROD_API_BASE_URL
-            REACT_APP_WEBSOCKET_URL = REACT_APP_PROD_WEBSOCKET_URL
+            environment:
+              REACT_APP_API_BASE_URL: REACT_APP_PROD_API_BASE_URL
+              REACT_APP_WEBSOCKET_URL: REACT_APP_PROD_WEBSOCKET_URL
             git push https://github.com/marcelloak/scheduler.git master:production
 
 workflows:
